--- a/app/src/main/res/layout/activity2.xml
+++ b/app/src/main/res/layout/activity2.xml
@@ -5,20 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onButtonClick"
-        android:text="Button"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="429dp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is Activity 2"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="345dp" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:background="#faecd1"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/img_fslogo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/img_fslogo" />
+
+        <TextView
+            android:layout_below="@id/img_fslogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Make your reservation"
+            android:textColor="#000000"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
