--- a/app/src/main/res/layout/activity3.xml
+++ b/app/src/main/res/layout/activity3.xml
@@ -5,11 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is Activity 3"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="319dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:background="#faecd1"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/img_fslogo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/img_fslogo" />
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
