--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="cream_color">#faecd1</color>
+    <color name="white_color">#fff</color>
+
+    <color name="app_color">#01537B</color>
+    <color name="app_background">#033C5D</color>
+    <color name="light_blue">#03A8C3</color>
+    <color name="light_red">#ee534f</color>
 </resources>
